Fixed skills icon placement

--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-code" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-code" aria-hidden="true" style="position:relative"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Programming</h4>
@@ -732,7 +732,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-pencil"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-pencil" style="position:relative"></span></i>
                         </div>  
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Design</h4>
@@ -742,7 +742,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-html5"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-html5" style="position:relative"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Web Development</h4>
@@ -756,7 +756,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-tv"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-tv" style="position:relative"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Media Editing</h4>
@@ -766,7 +766,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-wrench"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-wrench" style="position:relative"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Hardware</h4>
