Fixed the icon positions for mobile

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         }
     </script>
     <!-- //for-mobile-apps -->
-     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
     <!-- js -->
@@ -178,7 +178,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-md-6 services-grid-left">
                     <div class="col-xs-4 services-grid-left1">
                         <a href="https://www.linkedin.com/in/thesujaychand/" target="_blank">
-                            <i class="hovicon effect-2 sub-a"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a"><span class="fas fa-file" aria-hidden="true"></span></i>
                         </a>
                     </div>
                     <div class="col-xs-8 services-grid-left2">
@@ -190,7 +190,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-md-6 services-grid-right">
                     <div class="col-xs-4 services-grid-left1">
                         <a href="https://youtu.be/a3z8gVdHf2Q" target="_blank">
-                            <i class="hovicon effect-2 sub-a"><span class="glyphicon glyphicon-film" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a"><span class="fa fa-film" aria-hidden="true"  style="position:relative"></span></i>
                         </a>
                     </div>
                     <div class="col-xs-8 services-grid-left2">
@@ -732,7 +732,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-pencil" style="position:relative"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-pencil-alt" style="position:relative"></span></i>
                         </div>  
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Design</h4>
@@ -742,7 +742,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-html5" style="position:relative"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fab fa-html5" style="position:relative"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Web Development</h4>
@@ -766,7 +766,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-wrench" style="position:relative"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fas fa-microchip" style="position:relative"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Hardware</h4>
