Put bootstrap icons back in quick start

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-md-6 services-grid-left">
                     <div class="col-xs-4 services-grid-left1">
                         <a href="https://www.linkedin.com/in/thesujaychand/" target="_blank">
-                            <i class="hovicon effect-2 sub-a"><span class="fas fa-file" aria-hidden="true"></span></i>
+                            <i class="hovicon effect-2 sub-a"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></i>
                         </a>
                     </div>
                     <div class="col-xs-8 services-grid-left2">
@@ -190,7 +190,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-md-6 services-grid-right">
                     <div class="col-xs-4 services-grid-left1">
                         <a href="https://youtu.be/a3z8gVdHf2Q" target="_blank">
-                            <i class="hovicon effect-2 sub-a"><span class="fa fa-film" aria-hidden="true"  style="position:relative"></span></i>
+                            <i class="hovicon effect-2 sub-a"><span class="glyphicon glyphicon-film" aria-hidden="true"  style="position:relative"></span></i>
                         </a>
                     </div>
                     <div class="col-xs-8 services-grid-left2">
