Tried fixing image dimensions for icons

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="view effect">
                                     <a href="DTB/DrunkenTavernBrawler.html">
                                         <div class="img-top">
-                                            <img src="DTB/DTB_Cover.jpg" width="360 " height="250" />
+                                            <img src="DTB/DTB_Cover.jpg" />
                                             <div class="mask"></div>
                                             <div class="content">
                                                 <span class="info" title="Full Image">VIDEO GAME</span>
@@ -241,7 +241,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="view effect">
                                     <a href="DRIV_AR/DRIV-AR.html">
                                         <div class="img-top">
-                                            <img src="DRIV_AR/DRIV_AR%20Cover.jpg" width="360 " height="250" />
+                                            <img src="DRIV_AR/DRIV_AR%20Cover.jpg" />
                                             <div class="mask">
                                             </div>
                                             <div class="content">
@@ -254,7 +254,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="view effect">
                                     <a href="TechArt/TechArt.html">
                                         <div class="img-top">
-                                            <img src="TechArt/TechArt_Logo.jpg" width="360 " height="250" />
+                                            <img src="TechArt/TechArt_Logo.jpg" />
                                             <div class="mask"></div>
                                             <div class="content">
                                                 <span class="info" title="Full Image">TECHNICAL ART</span>
