Liv's spacing change 1

--- a/DTB/DrunkenTavernBrawler.html
+++ b/DTB/DrunkenTavernBrawler.html
@@ -144,7 +144,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					
 								<h3>Special Thanks To:</h3>
 					<ul>
-						<p> <strong>William Singh</strong> for Music and a couple animations</p>
+						<p> <strong>William Singh</strong> for music and various animations</p>
                        <br/>
                        
                         <p><a href="https://twitter.com/MyToastersBroke" target="_blank"> <strong>Aldo Visini</strong></a> for lighting help</p>
