--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="hvr-bubble-bottom"><a href="index.html">Home</a></li>
-						<li class="act"><a href="about.html">About Us</a></li>
+						<li class="act"><a href="about.html">About Me</a></li>
 						<li class="hvr-bubble-bottom"><a href="index.html#portfolio">Portfolio</a></li>
 						<li class="hvr-bubble-bottom"><a href="index.html#skills">Skills</a></li>
 					</ul>
