Fixed video framing for mobile

--- a/Brandwashed/Brandwashed.html
+++ b/Brandwashed/Brandwashed.html
@@ -140,9 +140,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 </p>
                                 <p>The goal of the game is to infiltrate Lifestyle Dynamics headquaters and put an end to their evil plans.</p>
 
-                                <div class="centered-video">
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/8Rbt7XDSJik" frameborder="0" allowfullscreen></iframe>
-                                </div>
+                                <div class="centered-video"> <div class="video-container"> 
+                                    <iframe src="https://www.youtube.com/embed/8Rbt7XDSJik" frameborder="0" allowfullscreen></iframe>
+                                    </div> </div>
 
                                 <br/>
 
