--- a/Spectrum/Spectrum.html
+++ b/Spectrum/Spectrum.html
@@ -135,9 +135,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <p>>A Co-op Bullet Hell Twin Stick Shooter, where players share weaponry and have to survive swarms of enemy ships.</p>
 
                                 <p>The project I worked on during Global Game Jam 18. This project was done in <strong>Unity</strong> and I worked as a programmer, predominantly working on the transmission of ammo and controller support.</p>
-                                <div class="centered-video">
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/WUuAd6Rvg_Q" frameborder="0" allowfullscreen></iframe>
-                                </div>
+                                
+                                <div class="centered-video"> <div class="video-container">
+                                    <iframe src="https://www.youtube.com/embed/WUuAd6Rvg_Q" frameborder="0" allowfullscreen></iframe>
+                                    </div> </div>
 
                                 <br/>
 
