--- a/TheFifthSuit/TheFifthSuit.html
+++ b/TheFifthSuit/TheFifthSuit.html
@@ -139,15 +139,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <p></p>
                                 <p>Nevertheless, we were a small team of 4 that attempted to do this project in less than 12 weeks. Many issues arose, thus we had to scrap together what we had and make a tech demo of the basic mechanics in one level.
                                 </p>
-                                <div class="centered-video">
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/9AMywJxN-40" frameborder="0" allowfullscreen></iframe>
-                                </div>
+                                <div class="centered-video"> <div class="video-container">
+                                    <iframe src="https://www.youtube.com/embed/9AMywJxN-40" frameborder="0" allowfullscreen></iframe>
+                                    </div> </div>
                                 <br/>
                                 <h2>Ledge Climbing Mechanics</h2>
                                 <br/>
-                                <div class="centered-video">
+                                <div class="centered-video"> <div class="video-container">
                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/f-meYqnz920" frameborder="0" allowfullscreen></iframe>
-                                </div>
+                                    </div> </div>
 
                             </div>
                             <div class="clearfix"> </div>
