Changed the tutorial cover image

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="view effect">
                                     <a href="UE4-Tutorials/UE4-Tutorials.html">
                                         <div class="img-top">
-                                            <img src="UE4-Tutorials/UE4WebSwinging.jpg"/>
+                                            <img src="UE4-Tutorials/Infamous ss neon tutorial.jpg"/>
                                             <div class="mask"></div>
                                             <div class="content">
                                                 <span class="info" title="Full Image">UE4 TUTORIAL</span>
