Made a page for recipe app

--- a/UE4-Tutorials/UE4-Tutorials.html
+++ b/UE4-Tutorials/UE4-Tutorials.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Portfolio: UE4 Tutorials</title>
+<title>Portfolio: UE4 TUTORIALS</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="../text/html; charset=utf-8" />
@@ -107,7 +107,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 						<div class="clearfix"> </div>
 						<div class="admin-text">
-								<h1>UE4 Tutorials</h1>
+								<h1>UE4 TUTORIALS</h1>
 								<div class="admin-text-left">
 								</div>
 								<div class="admin-text-right">
