Added Git to skills

--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Programming</h4>
-                            <p>C#, Blueprint, C++, Java & Processing</p>
+                            <p>C#, Blueprint, C++, Java, Processing & Git</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
