--- a/DRIV_AR/DRIV-AR.html
+++ b/DRIV_AR/DRIV-AR.html
@@ -111,7 +111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="admin-text-left">
 								</div>
 								<div class="admin-text-right">
-									<p>>DRIV//AR is an Augmented reality service designed for particularly privateer car dealerships. DRIV//AR allows these businesses to communicate the auto industry to its customers more effectively. DRIV//AR is able to be successfully implemented into any business that sell cars, and can easily justify the interests of company management, manufacturers, and potential customers.</p>
+									<p>>DRIV//AR is a mixed reality service designed for particularly privateer car dealerships. DRIV//AR allows these businesses to communicate the auto industry to its customers more effectively. DRIV//AR is able to be successfully implemented into any business that sell cars, and can easily justify the interests of company management, manufacturers, and potential customers.</p>
                                           
                                           <p>This project was presented on a <strong>Hololens</strong> and developed on <strong>Unity 3D</strong>. 
       </p>
