--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <li class="resp-tab-item"><span>Unity</span></li>
                         <li class="resp-tab-item"><span>React</span></li>
                         <li class="resp-tab-item"><span>Games</span></li>
-                        <li class="resp-tab-item"><span>AR/VR</span></li>
+                        <li class="resp-tab-item"><span>AR/VR/MR</span></li>
                         <li class="resp-tab-item"><span>Other</span></li>
                     </ul>
                     <div class="clearfix"> </div>
@@ -245,7 +245,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <div class="mask">
                                             </div>
                                             <div class="content">
-                                                <span class="info" title="Full Image">AUGMENTED REALITY (PAID)</span>
+                                                <span class="info" title="Full Image">MIXED REALITY (PAID)</span>
                                             </div>
 
                                         </div>
@@ -291,7 +291,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <img src="InSafehands/DG%20cover.jpg" />
                                             <div class="mask" class="hover"></div>
                                             <div class="content">
-                                                <span class="info" title="Full Image">AUGMENTED REALITY (PAID)</span>
+                                                <span class="info" title="Full Image">MIXED REALITY (PAID)</span>
                                             </div>
                                         </div>
                                     </a>
@@ -486,7 +486,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <div class="mask">
                                             </div>
                                             <div class="content">
-                                                <span class="info" title="Full Image">AUGMENTED REALITY (PAID)</span>
+                                                <span class="info" title="Full Image">MIXED REALITY (PAID)</span>
                                             </div>
 
                                         </div>
@@ -498,7 +498,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <img src="InSafehands/DG%20cover.jpg" />
                                             <div class="mask" class="hover"></div>
                                             <div class="content">
-                                                <span class="info" title="Full Image">AUGMENTED REALITY (PAID)</span>
+                                                <span class="info" title="Full Image">MIXED REALITY (PAID)</span>
                                             </div>
                                         </div>
                                     </a>
@@ -601,7 +601,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </div>
                         </div>
 
-                        <!-- AR/VR -->
+                        <!-- AR/VR/MR -->
 
                         <div class="tab-1 resp-tab-content">
                             <div class="main">
@@ -612,7 +612,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <div class="mask">
                                             </div>
                                             <div class="content">
-                                                <span class="info" title="Full Image">AUGMENTED REALITY (PAID)</span>
+                                                <span class="info" title="Full Image">MIXED REALITY (PAID)</span>
                                             </div>
 
                                         </div>
@@ -624,7 +624,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <img src="InSafehands/DG%20cover.jpg" />
                                             <div class="mask" class="hover"></div>
                                             <div class="content">
-                                                <span class="info" title="Full Image">AUGMENTED REALITY (PAID)</span>
+                                                <span class="info" title="Full Image">MIXED REALITY (PAID)</span>
                                             </div>
                                         </div>
                                     </a>
@@ -771,7 +771,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Design</h4>
-                            <p>Game, VR & AR</p>
+                            <p>App, Game, VR, AR & MR</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
