Updated my about me

--- a/about.html
+++ b/about.html
@@ -111,7 +111,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="clearfix"> </div>
 					</div>
 				</div>
-				<p class="para"> I am a New Zealand born programmer that loves experimenting with code, playing with game engines and dabbling in technical art. When working on projects, I quickly try and get them into the hands of the user and observe their actions and feedback. I actively train Muay Thai, which is my other passion. My work and training philosophy is to not to go all out every day, rather I work towards having a highly productive week and ensuring that I am not physically or mentally fatigued for the next day.</p>
+				<p class="para"> 				I am a New Zealand born programmer and designer with a Bachelor's in Creative Technologies from Auckland University of Technology. Currently, I work as a contract Unreal Developer at <a href="https://www.karaeducation.co.nz/" target="_blank">Kara Technologies</a> . I am always learning more to expand my skillset and enjoy experimenting with code, game engines and technical art.
+				<br/> <br/>
+				Outside of Technology, I am a Martials Arts enthusiast and actively train Muay Thai. My training training philosophy is to not to go all out every day, rather I work towards having a highly productive week and ensuring that I am not too physically or mentally fatigued for the next day. </p>   
 				<div class="clearfix"> </div>
 			</div>
 		</div>
