--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="services-grids">
                 <div class="col-md-6 services-grid-left">
                     <div class="col-xs-4 services-grid-left1">
-                        <a href="https://www.linkedin.com/in/thesujaychand/" target="_blank">
+                        <a href="https://drive.google.com/file/d/1saJqjjNsXd4ypGfx4SRRglqqMmzKRKFN/view?usp=sharing" target="_blank">
                             <i class="hovicon effect-2 sub-a"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></i>
                         </a>
                     </div>
