--- a/DRIV_AR/DRIV-AR.html
+++ b/DRIV_AR/DRIV-AR.html
@@ -121,7 +121,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             
             <br/>
             
-            <p><a href= "https://harryokona.myportfolio.com/drivar" target="_blank">THIS NOT MY PROJECT</a>, rather I outsourced my skills to develop the functionality of the product. I programmed the fundamentals of the customiser and handled most of the backend. Where the designer could just rely on dropdown menus and public variables, when implementing the script components on the buttons and car parts.</p>
+            <p><a class="in-text" href= "https://harryokona.myportfolio.com/drivar" target="_blank">THIS NOT MY PROJECT</a>, rather I outsourced my skills to develop the functionality of the product. I programmed the fundamentals of the customiser and handled most of the backend. Where the designer could just rely on dropdown menus and public variables, when implementing the script components on the buttons and car parts.</p>
 								</div>
 								<div class="clearfix"> </div>
 						</div>
