--- a/DTB/DrunkenTavernBrawler.html
+++ b/DTB/DrunkenTavernBrawler.html
@@ -112,7 +112,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="admin-text-right">
 									<p>A multiplayer 3D Arena Brawler, where all the characters are drunk.</p>
-                                          <p>Winner of the  <a href= "https://twitter.com/AUTCareers/status/928836731767472128" target="_blank"><strong>Auckland University of Technology, AR/VR Garage Award (2017)</strong></a></p>
+                                          <p>Winner of the  <a class="in-text" href= "https://twitter.com/AUTCareers/status/928836731767472128" target="_blank"><strong>Auckland University of Technology, AR/VR Garage Award (2017)</strong></a></p>
     
       <p>This was my graduation project, a 3D fighter where I played with ragdoll and bone physics to create a drunken effect.  
       </p>
