--- a/SpaceApp2016/SpaceLife16.html
+++ b/SpaceApp2016/SpaceLife16.html
@@ -113,7 +113,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="admin-text-right">
 									<p>Our group submission for NZ SpaceApps 2016.</p>
  
-                                      <p>This project was made in less than 24 hours for the NASA SpaceApps Challenge 2016. We managed to win the <a href="http://spaceapps.nz/2016/#projects" target="_blank"> People Choice Award in New Zealand</a>.</p>
+                                      <p>This project was made in less than 24 hours for the NASA SpaceApps Challenge 2016. We managed to win the <a class="in-text" href="http://spaceapps.nz/2016/#projects" target="_blank"> People Choice Award in New Zealand</a>.</p>
                                           
                                            <div class="centered-video"> <div class="video-container">       
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/N7IQg1_DvzM" frameborder="0" allowfullscreen></iframe>
