--- a/TechArt/TechArt.html
+++ b/TechArt/TechArt.html
@@ -111,7 +111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="admin-text-left">
 								</div>
 								<div class="admin-text-right">
-									                <p>Every Tuesday (New Zealand Standard Time), I upload a new piece of Technical Art on <a href="https://www.youtube.com/playlist?list=PLNCYKCtFpFcSvEFBf6XeBWOX0qO7u5mvm" target="_blank">YouTube</a> and <a href="https://www.instagram.com/thesujaychand/?hl=en" target="_blank">Instagram</a>. The goal of this project is to help me develop a technical skill that is less programming oriented and more artist.
+									                <p>Every Tuesday (New Zealand Standard Time), I upload a new piece of Technical Art on <a class="in-text" href="https://www.youtube.com/playlist?list=PLNCYKCtFpFcSvEFBf6XeBWOX0qO7u5mvm" target="_blank">YouTube</a> and <a class="in-text" href="https://www.instagram.com/thesujaychand/?hl=en" target="_blank">Instagram</a>. The goal of this project is to help me develop a technical skill that is less programming oriented and more artist.
     
      
                                            <div class="centered-video">    <div class="video-container">    
