--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div id="portfolio" class="portfolio">
         <div class="container">
             <h3>Portfolio</h3>
-            <p class="vel">Hi, I'm Sujay, a Games, Mixed Reality & App Developer that enjoys playing with Unreal Engine 4, Unity 3D and React.js. Here is a collection of projects that I am proud of.
+            <p class="vel">Hi, I'm Sujay, a Games, Mixed Reality & App Developer. I currently work at <a class="in-text" href="https://www.kara.tech/" target="_blank">Kara Technologies</a> on a Digital Human that assists in Deaf education. Here is a collection of projects that I am proud of:
             </p>
 
             <div class="sap_tabs">
@@ -302,7 +302,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <img src="ReactRecipeApp/ReactRecipeAppCover.png" width="360 " height="250" />
                                             <div class="mask"></div>
                                             <div class="content">
-                                                <span class="info" title="Full Image">RECIPE APP</span>
+                                                <span class="info" title="Full Image">RECIPE WEB APP</span>
                                             </div>
                                         </div>
                                     </a>
@@ -313,7 +313,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <img src="ReactWeatherApp/WeatherAppSS.png" width="360 " height="250" />
                                             <div class="mask"></div>
                                             <div class="content">
-                                                <span class="info" title="Full Image">WEATHER APP</span>
+                                                <span class="info" title="Full Image">WEATHER WEB APP</span>
                                             </div>
                                         </div>
                                     </a>
@@ -528,7 +528,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <img src="ReactRecipeApp/ReactRecipeAppCover.png" width="360 " height="250" />
                                             <div class="mask"></div>
                                             <div class="content">
-                                                <span class="info" title="Full Image">RECIPE APP</span>
+                                                <span class="info" title="Full Image">RECIPE WEB APP</span>
                                             </div>
                                         </div>
                                     </a>
@@ -540,7 +540,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <img src="ReactWeatherApp/WeatherAppSS.png" />
                                             <div class="mask"></div>
                                             <div class="content">
-                                                <span class="info" title="Full Image">WEATHER APP</span>
+                                                <span class="info" title="Full Image">WEATHER WEB APP</span>
                                             </div>
                                         </div>
                                     </a>
@@ -665,7 +665,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <img src="ReactRecipeApp/ReactRecipeAppCover.png" width="360 " height="250" />
                                             <div class="mask"></div>
                                             <div class="content">
-                                                <span class="info" title="Full Image">RECIPE APP</span>
+                                                <span class="info" title="Full Image">RECIPE WEB APP</span>
                                             </div>
                                         </div>
                                     </a>
@@ -678,7 +678,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <img src="ReactWeatherApp/WeatherAppSS.png" />
                                             <div class="mask"></div>
                                             <div class="content">
-                                                <span class="info" title="Full Image">WEATHER APP</span>
+                                                <span class="info" title="Full Image">WEATHER WEB APP</span>
                                             </div>
                                         </div>
                                     </a>
