--- a/about.html
+++ b/about.html
@@ -112,9 +112,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 				<p class="para">
-				I am a New Zealand born programmer and designer with a Bachelor's in Creative Technologies from Auckland University of Technology. Currently, I work as a contract Unreal Developer at <a href="https://www.karaeducation.co.nz/" target="_blank">Kara Technologies</a> . I am always learning more to expand my skillset and enjoy experimenting with code, game engines and technical art.
+				I am a New Zealand born programmer and designer with a Bachelor's in Creative Technologies from Auckland University of Technology. Currently, I work as a contract Unreal Genralist and Software Developer at <a class="in-text" href="https://www.karaeducation.co.nz/" target="_blank">Kara Technologies</a>. I have a passion for exploring game engines and finding technoloical solutions for the disabled.
+				  
 				<br/> <br/>
-				Outside of Technology, I am a Martials Arts enthusiast and actively train Muay Thai. My training training philosophy is to not to go all out every day, rather I work towards having a highly productive week and ensuring that I am not too physically or mentally fatigued for the next day.
+				Outside of work, I am a Martials Arts enthusiast that actively trains Muay Thai.  
 				</p>   
 				<div class="clearfix"> </div>
 			</div>
