Updated Trello link position

--- a/DTB/DrunkenTavernBrawler.html
+++ b/DTB/DrunkenTavernBrawler.html
@@ -134,7 +134,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-4 blog-right">
 					<h3>Team:</h3>
 					<ul>
-						<p><strong>Sujay Chand (Myself) </strong>- Programmer, Technical Artist, Game Designer and <a href="https://trello.com/b/SmoWX2ni/drunken-tavern-brawler" target="_blank"><strong>Project Manager</strong></a></p>
+						<p><strong>Sujay Chand (Myself) </strong>- Programmer, Technical Artist, Game Designer and Project Manager</p>
 						<br/>
                         <p><a href="https://ryancsue.wixsite.com/creativetech" target="_blank"> <strong>Ryan Sue </strong></a> - 3D Artist and Level Designer</p>
                <br/>
@@ -176,6 +176,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						               <br/>
                 <h3>Documention:</h3>
                 <ul class="tag3">
+							<li><a href="https://trello.com/b/SmoWX2ni/drunken-tavern-brawler" target="_blank">Trello</a></li>
 							<li><a href="http://isthisprogress.tumblr.com/tagged/sharedplaygroundsaut" target="_blank">Blog Posts</a></li>
 						</ul>
 					</div>
