Updated CV link

--- a/DRIV_AR/DRIV-AR.html
+++ b/DRIV_AR/DRIV-AR.html
@@ -60,8 +60,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <ul class="nav navbar-nav">
                         <li class="act"><a href="../index.html">Home</a></li>
                         <li class="hvr-bubble-bottom"><a href="../about.html">About Me</a></li>
-                        <li class="hvr-bubble-bottom"><a href="../index.html#portfolio">Portfolio</a></li>
-                        <li class="hvr-bubble-bottom"><a href="../index.html#skills">Skills</a></li>
+                        <li class="hvr-bubble-bottom"><a href="../index.html#portfolio" class="scroll">Portfolio</a></li>
+                        <li class="hvr-bubble-bottom"><a href="../index.html#skills" class="scroll">Skills</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->	
 				
