--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="services-grids">
                 <div class="col-md-6 services-grid-left">
                     <div class="col-xs-4 services-grid-left1">
-                        <a href="https://drive.google.com/file/d/1saJqjjNsXd4ypGfx4SRRglqqMmzKRKFN/view?usp=sharing" target="_blank">
+                        <a href="https://drive.google.com/file/d/1GNmZfDvAHFyAcAKnwLmCPlPEEQ9pZrXC/view?usp=sharing" target="_blank">
                             <i class="hovicon effect-2 sub-a"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></i>
                         </a>
                     </div>
@@ -205,7 +205,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
     <!-- //services -->
     <!-- portfolio -->
-    <div id="portfolio" class="portfolio">
+    <div id="portfolio" name="portfolio" class="portfolio">
         <div class="container">
             <h3>Portfolio</h3>
             <p class="vel">Hi, I'm Sujay, a Games, Mixed Reality & App Developer. I currently work at <a class="in-text" href="https://www.kara.tech/" target="_blank">Kara Technologies</a> on a Digital Human that assists in Deaf education. Here is a collection of projects that I am proud of:
