Swapped out robotics with Source Control

--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Programming</h4>
-                            <p>C#, Blueprint, C++, Java, Processing & Git</p>
+                            <p>C++, C#, Java, Processing, Arduino & Blueprint</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
@@ -781,7 +781,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
                         <div class="col-xs-8 services-grid-left2">
                             <h4>Web Development</h4>
-                            <p>React.js, HTML5 & CSS3</p>
+                            <p>ReactJS, HTML5 & CSS3</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
@@ -791,21 +791,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="services-grids">
                     <div class="col-md-6 services-grid-left">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-tv" style="position:relative"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fa fa-code-branch" style="position:relative"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
-                            <h4>Media Editing</h4>
-                            <p>Audition, Premiere Pro & Photoshop</p>
+                            <h4>Source Control</h4>
+                            <p>Git, GitHub, SourceTree & Perforce</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
                     <div class="col-md-6 services-grid-right">
                         <div class="col-xs-4 services-grid-left1">
-                            <i class="hovicon effect-2 sub-a feat"><span class="fas fa-microchip" style="position:relative"></span></i>
+                            <i class="hovicon effect-2 sub-a feat"><span class="fas fa-tv" style="position:relative"></span></i>
                         </div>
                         <div class="col-xs-8 services-grid-left2">
-                            <h4>Hardware</h4>
-                            <p>Arduino, NodeMCU & Fritzing</p>
+                            <h4>Media Editing</h4>
+                            <p>Audition, Premiere Pro & Photoshop</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
